--- a/styles/header.css
+++ b/styles/header.css
@@ -27,16 +27,13 @@ body {
   border-bottom: 2px solid black;
   /* padding:2px; */
 }
+
 ul,
 li {
   padding: 0;
   text-decoration: none;
   list-style-type: none;
   margin: 0;
-}
-.nav-extended {
-  margin: 2px;
-  padding: 0;
 }
 .pb-family-right {
   flex: 3;
@@ -105,7 +102,7 @@ li {
   line-height: 32px;
 }
 .nav-link-extended {
-  padding-top: 20px;
+  /* padding-top: 20px; */
   display: flex;
   flex-direction: row;
   justify-content: space-around;
@@ -132,8 +129,8 @@ li {
   font-weight: 300;
   font-size: 12px;
   letter-spacing: 0.2px;
-    line-height: 20px;
-    padding-bottom: 8px;
+  line-height: 20px;
+  padding-bottom: 8px;
 }
 #hp-hr-line {
   color: black;
@@ -141,7 +138,6 @@ li {
   border-bottom: 1px solid rgb(148, 144, 144);
   margin-top: 0;
 }
-
 
 #header-nav-menu > li > .dropdown {
   display: none;
@@ -152,9 +148,9 @@ li {
   /* height: 100vh; */
   background-color: white;
   z-index: 2;
-  margin: 5px 0 0px 0;
-  border: 2px solid green; 
-  padding-bottom:40px;
+  margin: 0px 0 0px 0;
+  /* border: 2px solid green;  */
+  padding: 10px;
 }
 #header-nav-menu {
   position: relative;
@@ -162,12 +158,18 @@ li {
   margin: 0;
   justify-content: center;
   width: 100%;
-  height: 28px;
-align-items: center;
+  height: 22px;
 }
-#header-nav-menu >li:hover>.dropdown {
+#header-nav-menu > li:hover > .dropdown {
   display: block;
 }
-#header-nav-menu >li{
+#header-nav-menu > li {
   margin: 0 10px;
+  font-size: 13px;
+  font-weight: 400;
+  line-height: 20px;
+  color: #010101;
+}
+#header-nav-menu > li:hover {
+  border-bottom: 2px solid black;
 }
