--- a/styles/header.css
+++ b/styles/header.css
@@ -67,8 +67,15 @@ li {
   letter-spacing: 14px;
   tab-size: 4;
 }
+.separated-list {
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+}
 #search-field {
   flex: 3;
+  display: flex;
 }
 .separated-list {
   display: flex;
@@ -87,7 +94,7 @@ li {
   top: 25px;
   left: 0;
   width: 100%;
-  height: 60vh;
+  height: 75vh;
   background-color: white;
   z-index: 2;
   margin: 5px 0 0 0;
@@ -105,16 +112,10 @@ li {
   /* padding-top: 20px; */
   display: flex;
   flex-direction: row;
-  justify-content: space-around;
+  /* justify-content: space-around; */
+  justify-content: center;
   /* margin-bottom: 0; */
   margin: 0 auto;
-}
-
-#sustainibility {
-  justify-content: center;
-}
-#sustainibility > ul {
-  margin: 0 1%;
 }
 .nav-link-extended > ul > img {
   width: 200px;
@@ -123,6 +124,9 @@ li {
   line-height: 14px;
   font-weight: 600;
   font-size: 12px;
+}
+.nav-link-extended > ul {
+  margin: 0 1%;
 }
 .nav-link-extended > ul > li {
   line-height: 20px;
