--- a/styles/furniture.css
+++ b/styles/furniture.css
@@ -8,6 +8,10 @@
     margin: 0px;
     font-family: TT-Norms-Pro,Open Sans,Helvetica,Arial,sans-serif;
 }
+a{
+    text-decoration: none;
+    color: black;
+}
 #offer_tags{
     height: 60px;
     width: 100%;
